add: healthcheck endpoint
